manifest3.yaml
---
# Source: onechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-site-from-image
  namespace: default
  labels:
    helm.sh/chart: onechart-0.63.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: my-react-site-from-image
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: my-react-site-from-image
---
# Source: onechart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-site-from-image
  namespace: default
  labels:
    helm.sh/chart: onechart-0.63.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: my-react-site-from-image
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubectl.kubernetes.io/default-container: my-react-site-from-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: onechart
      app.kubernetes.io/instance: my-react-site-from-image
  template:
    metadata:
      annotations:
        checksum/config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: onechart
        app.kubernetes.io/instance: my-react-site-from-image
    spec:
      containers:
      - image: ttl.sh/my-react-site-from-image:1d
        imagePullPolicy: Always
        name: my-react-site-from-image
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        securityContext: {}
      initContainers: null
      securityContext:
        fsGroup: 999
