manifest2.yaml
---
# Source: static-site/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-site2
  namespace: default
  labels:
    helm.sh/chart: static-site-0.63.0
    app.kubernetes.io/name: static-site
    app.kubernetes.io/instance: my-react-site2
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: static-site
    app.kubernetes.io/instance: my-react-site2
---
# Source: static-site/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-site2
  namespace: default
  labels:
    helm.sh/chart: static-site-0.63.0
    app.kubernetes.io/name: static-site
    app.kubernetes.io/instance: my-react-site2
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: static-site
      app.kubernetes.io/instance: my-react-site2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: static-site
        app.kubernetes.io/instance: my-react-site2
    spec:
      securityContext:
        {} 
      volumes:
      - name: static-files
        emptyDir: {}  
      containers:
        - name: my-react-site2
          securityContext:
            runAsUser: 0
          image: "nginx:latest"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: static-files
            mountPath: /usr/share/nginx/html
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
# Source: static-site/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: my-react-site2
  namespace: default
  labels:
    helm.sh/chart: static-site-0.63.0
    app.kubernetes.io/name: static-site
    app.kubernetes.io/instance: my-react-site2
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "walkthrough.turbopizza.net"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: my-react-site2
                port:
                  number: 80
